--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,10 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+p {
+  margin-left: 20px;
+  margin-right: 20px;
+  line-height: 2;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
